# Luma

./: .dockerignore  .gitattributes  .gitignore  .oxlintrc.json  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  showcase.html  showcase.vite.config.ts  vite.config.ts
.cargo/: audit.toml
.claude/: settings.json
.claude/agents/: backend-executor.md  fable-orchestrator.md  frontend-executor.md
.github/workflows/: audit.yml  ci.yml  release-please.yml  release.yml
apps/desktop/: package.json  vitest.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/website/privacy/: index.html
apps/website/src/: App.tsx
branding/: README.md
branding/icon-composer/: README.md
branding/icon-composer/star.icon/: icon.json
branding/screenshots/: .gitignore
docs/: BUILD_PLAN.md  RELEASING.md
scripts/: Export-TermiusVault.ps1  README.md  android-dev.ps1  benchmark.mjs  capture-ios-screenshots.mjs  capture-ipad-screenshots.mjs  capture-screenshots.mjs  capture-website-mobile-screenshots.mjs  compile-apple-icon.mjs
services/collaboration-server/: .env.example  Dockerfile  compose.yaml  package.json  tsconfig.json
services/collaboration-server/migrations/: 0001_collaboration.sql
services/collaboration-server/src/: auth.ts  config.ts  database.ts  roomRouter.ts  server.ts  storage.ts  tickets.ts
services/collaboration-server/test/: config.test.ts
services/sync-server/: package.json  wrangler.jsonc
services/sync-server/migrations/: 0001_accounts.sql
services/sync-server/src/: accounts.ts  auth.ts  index.ts  responses.ts  sync.ts  types.ts
services/sync-server/test/: api.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/migrations/: 0003_identities.sql  0004_key_certificates.sql  0005_key_secrets.sql
src-tauri/permissions/: existing-commands.toml  mobile-commands.toml
src-tauri/permissions/autogenerated/: derive_public_key.toml
src-tauri/src/: lib.rs  main.rs  snippet_runs.rs  vault.rs
src-tauri/src/commands/: hosts.rs  known_hosts.rs  mod.rs  port_forwards.rs  sftp.rs  snippets.rs  ssh.rs  sync.rs
src-tauri/src/errors/: mod.rs
src-tauri/src/import/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/serial/: mod.rs
src-tauri/src/sftp/: local.rs  mod.rs  transfer.rs
src-tauri/src/ssh/: config.rs  embedded.rs  known_hosts.rs  mod.rs  remote_os.rs  tunnels.rs
src-tauri/src/storage/: host_groups.rs  hosts.rs  identities.rs  identities_mobile.rs  key_references.rs  mod.rs  port_forwards.rs  profiles.rs  settings.rs  snippets.rs
src-tauri/src/sync/: mod.rs  providers.rs
src-tauri/src/terminal/: mod.rs
src-tauri/tests/: ssh_askpass_windows.rs
src/app/: App.tsx  DesktopLayout.tsx  Layout.tsx  useAppInit.ts
src/components/: DistroIcon.tsx  Modal.tsx  Sidebar.tsx  SidebarPanel.tsx  TitleBar.tsx
src/features/hosts/: ConnectionErrorAlert.tsx  GroupDialog.tsx  HostEditorDialog.tsx  HostKeyChangedAlert.tsx  HostsPanel.tsx  HostsScreen.tsx  IdentitiesDialog.tsx  ImportDialog.tsx  KeyReferencesDialog.tsx  fields.tsx  sshErrors.ts
src/features/keychain/: GenerateKeyDialog.tsx  InstallKeyDialog.tsx  KeychainScreen.tsx
src/features/knownHosts/: KnownHostsScreen.tsx
src/features/mobile/: MobileHostsScreen.tsx  MobileLayout.tsx  MobileNav.tsx  MobileSettingsScreen.tsx  MobileSftpScreen.tsx  MobileTerminalView.tsx  useVisualViewport.ts
src/features/palette/: CommandPalette.tsx
src/features/settings/: ProfilesSection.tsx  SettingsScreen.tsx
src/features/sftp/: FilePane.tsx  SftpScreen.tsx  TransferQueue.tsx
src/features/snippets/: MultiHostRunDialog.tsx  SnippetDialog.tsx  SnippetRunner.tsx  SnippetsScreen.tsx
src/features/sync/: BackupSection.tsx  ConflictDialog.tsx  SyncSection.tsx
src/features/terminal/: EmptyState.tsx  NewTabLauncher.tsx  PaneTreeView.tsx  PaneView.tsx  SaveHostDialog.tsx  SaveTemplateDialog.tsx  SerialConnectDialog.tsx  SplitWithHostDialog.tsx  TabBar.tsx  TerminalView.tsx  Workspace.tsx  paneTree.ts  sessionSnapshot.test.ts  sessionSnapshot.ts  terminalManager.mobile.test.ts  terminalManager.test.ts  terminalManager.ts
src/features/workspace/: SectionScreen.tsx
src/hooks/: useHosts.ts  useKnownHosts.ts  usePortForwards.ts  useSettings.ts  useSftp.ts  useShells.ts  useSnippets.ts  useSync.ts  useTheme.ts
src/lib/: hosts.ts  keymap.test.ts  keymap.ts  knownHosts.ts  queryClient.ts  serial.ts  settings.ts  sftp.ts  snippets.ts  ssh.ts  sync.ts  terminal.ts  themeImport.test.ts
src/showcase/: invokeHandlers.ts  main.tsx  scenarios.ts  seed.ts  showcase.css  terminalContent.ts
src/showcase/mocks/: core.ts  (+1 more)
src/stores/: capabilityStore.ts  keymapStore.test.ts  keymapStore.ts  sessionLogStore.test.ts  sessionLogStore.ts  sessionStore.test.ts  sessionStore.ts  sftpStore.test.ts  sftpStore.ts  snippetHostRunStore.ts  snippetRunStore.ts  syncStore.ts  terminalStyleStore.test.ts  tunnelStore.ts  uiStore.ts
src/styles/: globals.css
src/test/: setup.ts  tauriMock.ts  xtermMock.ts
src/types/: index.ts
website/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
website/src/: App.tsx  config.ts  styles.css
website/support/: index.html
(+131 files in other folders)
