[package]
name = "luma"
version = "0.11.0"
description = "A lightweight cross-platform terminal and SSH client"
authors = ["Luma contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "luma_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "process",
  "io-util",
  "fs",
  "time",
] }
russh-sftp = "2.3"
russh = { version = "0.62.2", default-features = false, features = ["ring", "rsa"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
zeroize = "1"
ssh-key = { version = "0.6.7", default-features = false, features = [
  "std",
  "encryption",
  "ed25519",
  "rsa",
] }
rsa = { version = "0.9.8", features = ["pkcs5"] }
ed25519-dalek = { version = "2", features = ["pkcs8"] }
pkcs8 = { version = "0.10.2", features = ["encryption", "pem"] }
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "sqlite",
  "migrate",
  "macros",
  "json",
] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
base64 = "0.22"
fs2 = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
portable-pty = "0.9"
# CI: requires libudev-dev on Linux
serialport = "4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSFileManager",
  "NSObject",
  "NSString",
  "NSURL",
] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_Threading",
] }
